--- a/app5K/__alps/app/style/app.scss
+++ b/app5K/__alps/app/style/app.scss
@@ -1,6 +1,8 @@
 /* app v2018.10.21
 */
 @import "app_core";
+@import "app_html_core";
+@import "app_grid";
 @import "app_interface";
 @import "app_markup";
 @import "app_default_design";
