--- a/app5K/__alps/app/style/app_core.scss
+++ b/app5K/__alps/app/style/app_core.scss
@@ -1,86 +1,57 @@
-/*
-    base css 1002 Monica De Gennaro
-    v2018.10.5
-*/
 
-/* ------------------------------------ box model */
+/* ------------------------------------ screen sizes */
 
-*, *:before, *:after     { box-sizing: inherit; }
-html                     { box-sizing: border-box; }
+$screenMaxSizeForMobile:    600px;
+$screenMaxSizeForTablet:    900px;
+$screenMaxSizeForXS:       1100px;
+$screenMaxSizeForS:        1300px;
+$screenMaxSizeForM:        1400px;
+$screenMaxSizeForL:        1800px;
 
-/* footer mod */
+$screenForAll:      "min-width: 0px";
+$screenForXL:       "min-width: #{$screenMaxSizeForL + 1}";
+$screenForL:        "max-width: #{$screenMaxSizeForL}";
+$screenNotL:        "min-width: #{$screenMaxSizeForL + 1}";
+$screenForM:        "max-width: #{$screenMaxSizeForM}";
+$screenNotM:        "min-width: #{$screenMaxSizeForM + 1}";
+$screenForS:        "max-width: #{$screenMaxSizeForS}";
+$screenNotS:        "min-width: #{$screenMaxSizeForS + 1}";
+$screenForXS:       "max-width: #{$screenMaxSizeForXS}";
+$screenNotXS:       "min-width: #{$screenMaxSizeForXS + 1}";
+$screenForTablet:   "max-width: #{$screenMaxSizeForTablet}";
+$screenNotTablet:   "min-width: #{$screenMaxSizeForTablet + 1}";
+$screenForMobile:   "max-width: #{$screenMaxSizeForMobile}";
+$screenNotMobile:   "min-width: #{$screenMaxSizeForMobile + 1}";
 
-html {
-    height: 100%;
-    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-        display: flex;
-        flex-direction: column;
-    }
-}
-body {
-    min-height: 100%;
-    margin: 0;
+/* ------------------------------------ font */
+
+$fontSizeSmaller: 0.8em; // deprecated
+
+/* ------------------------------------ other settings */
+
+$dim: 0.8rem; // dimension unit
+$margin-def: 2.4rem;
+$margin-overmain: 4.8rem;
+$width--text-column:  64rem;
+$width--aside-column: 26rem;
+$width--aside-column-extended: 32rem;
+
+/* ------------------------------------ tools */
+
+@mixin contentbox--xy-centered {
     display: flex;
-    flex-direction: column;
-    [role-footer], .role-footer {
-        margin-top: auto;
-    }
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
-
-/* ------------------------------------ markup defaults */
-
-*, ::before, ::after { background-repeat: no-repeat; }
-nav ul, nav ol { padding: 0; margin: 0; list-style-type: none; }
-details, article, aside, footer, header, nav, section, main { display: block; }
-figure, figcaption, fieldset, legend {
-    display: block;
-    margin: 0;
-    padding: 0;
-    border: none;
-    white-space: normal;
+@mixin contentbox--y-centered {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
 }
-summary { display: list-item; }
-canvas { display: inline-block; }
-[hidden], template { display: none; }
-
-/* ------------------------------------ content defaults */
-
-html {
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-    cursor: default;
+@mixin has-illustrated-background {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
-body {
-  text-rendering: optimizeLegibility; // best quality
-  -webkit-font-smoothing: antialiased;
-}
-a, area, button, input, label, select, summary, textarea, [tabindex] {
-  // Single taps are dispatched immediately on clickable elements
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-}
-a {
-  background-color: transparent;
-  text-decoration: none;
-  color: inherit;
-}
-img, svg {
-  display: block;
-  border: none;
-  max-width: 100%;
-}
-audio, canvas, iframe, img, svg, video {
-  vertical-align: middle;
-}
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted;
-}
-
-/* ------------------------------------ end of core */
