--- a/app5K/__alps/app/style/app_html_base.scss
+++ b/app5K/__alps/app/style/app_html_base.scss
@@ -83,4 +83,6 @@ abbr[title] {
   text-decoration: underline dotted;
 }
 
-/* ------------------------------------ end of core */
+
+
+/* ------------------------------------ end of html base */
