--- a/app5K/__alps/app/style/design_app_default_form.scss
+++ b/app5K/__alps/app/style/design_app_default_form.scss
@@ -2,7 +2,7 @@
     Required: app_default_design.scss
     Form primitives
 */
-[role-content], .role-content {
+.design-for-form {
 
     /* Normalize */
 
