--- a/app5K/__alps/app/style/app_grid.scss
+++ b/app5K/__alps/app/style/app_grid.scss
@@ -1,7 +1,16 @@
 /*
     app grid system
     v2018.10.22
+
+    article - main text collumn with sidenotes
 */
+
+// required
+
+// $width--text-column
+// $width--aside-column
+// $margin-def
+// $screenForArticleLayout
 
 //* ------------------------------------ layout base
 
