--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -146,6 +146,10 @@ a:focus {
   outline-offset: .15em;
 }
 
+/* GRID */
+
+grid-column: span 8 / -1; // this item will always align to the end
+
 /* =================================================================== Forms */
 
 .aFormInput:invalid:not(:placeholder-shown) {
