--- a/app5K/__alps/app/style/app_html_base.scss
+++ b/app5K/__alps/app/style/app_html_base.scss
@@ -25,6 +25,7 @@ body {
     [role-footer], .role-footer {
         margin-top: auto;
     }
+    overflow-y: scroll; // this is scrollbar solution
 }
 
 /* ------------------------------------ markup defaults */
