--- a/app5K/__alps/app/style/design_app_default.scss
+++ b/app5K/__alps/app/style/design_app_default.scss
@@ -50,7 +50,9 @@ body {
 .design-for-markup {
 
     * {
-        hanging-punctuation: first;
+        @supports (hanging-punctuation:first) {
+            hanging-punctuation: first;
+        }
     }
 
     h1, h2, h3, h4, h5, h6 {
